# cpu_renderer

./: .gitmodules  CMakeLists.txt  Makefile
doc/: bunny.c  cube_skin.c  flag_plane.c  overlap_cube.c  pos_cube.c  solid_face.c  texture.c
src/: app.c  app.h  camera.c  camera.h  clip_cull_trian.c  clip_cull_trian.h  coor_transformer.h  coor_transoformer.c  drawable.c  drawable.h  entity.c  entity.h  indexed_triangle_list.c  indexed_triangle_list.h  keyboard.c  keyboard.h  main.c  pipeline.c  pipeline.h  screen_transformer.c  screen_transformer.h  surface.c  surface.h  texture-vertex.h  texture_vertex.c  texture_vertex.h  triangle.h  triangle_rasterizer.c  triangle_rasterizer.h  vertex.c  vertex.h  window.c  window.h  world.c  world.h  z_buffer.c  z_buffer.h
src/helpers/: debug_info.c  debug_info.h  diagnostics.c  diagnostics.h  helpers.c  helpers.h
src/renderer/: renderer.c  renderer.h
src/scenes/: bunny.c  color_cube.c  cube_folded.c  cube_order.c  cube_skin.c  flag_plane.c  flat_image.c  overlap_cube.c  pos_cube.c  scene.h  solid_cube.c  solid_face.c  suz.c  test.c  texture.c
src/shaders/: effect.h  vertex.c  vertex.h
src/shaders/geometry-shaders/: default-shader.c  sface-shader.c
src/shaders/pixel-shaders/: color-shader.c  default-shader.c  solid-shader.c  tex-vertex.c  texture-shader.c
src/shaders/vertex-shaders/: default-shader.c  flat-shader.c  point-gou-shader.c  position-shader.c  wawe-shader.c
src/shapes/: cube.c  cube_folded.c  plane.c  shapes.c  shapes.h  shere.c  star.c
vendors/tinyobj/: tinyobj_loader_c.h
(+5 files in other folders)
